# feed-rs

./: Cargo.toml  README.md
migrations/: 20250828194946_init_db.sql
scripts/: create_user.sql
src/: log.rs  main.rs
src/controller/: feed.rs  mod.rs
src/model/: entry.rs  entry2.rs  feed.rs  mod.rs  user.rs
