[package]
name = "feed-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
const_format = "0.2.34"
dotenvy = "0.15.7"
futures = "0.3.31"
rocket = "0.5.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "chrono", "postgres", "runtime-tokio", "ipnetwork"]

#[dependencies.rocket_db_pools]
#version = "0.2.0"
#features = ["sqlx_postgres"]
