[package]
name = "feed-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
const_format = "0.2.34"
dotenvy = "0.15.7"
futures = "0.3.31"
actix-web = "4"
actix-files = "0.6.7"
md-5 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
reopen = "1.0.3"
simplelog = "0.12.2"
log = "0.4.28"
actix-web-httpauth = "0.8.2"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "chrono", "postgres", "runtime-tokio", "ipnetwork", "json"]

#[dependencies.rocket_db_pools]
#version = "0.2.0"
#features = ["sqlx_postgres"]
